// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-accordion should render with _label="Überschrift" _level=3 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <details class="collapsible kol-accordion">
      <summary aria-controls="accordion-control-nonce" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce">
        <h3 class="collapsible__heading kol-accordion__heading kol-headline kol-headline--h3 kol-headline--single">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </h3>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=false 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <details class="collapsible kol-accordion">
      <summary aria-controls="accordion-control-nonce" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce">
        <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=true 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <details class="collapsible collapsible--disabled kol-accordion">
      <summary aria-controls="accordion-control-nonce" aria-disabled="true" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce" tabindex="-1">
        <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=false 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <details class="collapsible collapsible--open kol-accordion" open="">
      <summary aria-controls="accordion-control-nonce" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce">
        <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-down" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=true 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <details class="collapsible collapsible--disabled collapsible--open kol-accordion" open="">
      <summary aria-controls="accordion-control-nonce" aria-disabled="true" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce" tabindex="-1">
        <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-down" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <details class="collapsible kol-accordion">
      <summary aria-controls="accordion-control-nonce" class="collapsible__heading collapsible__heading-button kol-accordion__heading kol-accordion__heading-button" id="accordion-heading-nonce">
        <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="kol-span">
            <span class="kol-span__container">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
              <span class="kol-span__label">
                Überschrift
              </span>
              <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-accordion>
`;
